# bolt

./: .bumpversion.cfg  .dockerignore  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tsv_comparator.py
.github/workflows/: build.yaml  test.yaml
bolt/: __main__.py  logging_config.py  util.py  vcf_comparator.py
bolt/common/: constants.py  pcgr.py
bolt/workflows/: cli.py
bolt/workflows/other/: cancer_report.py  multiqc_report.py  purple_baf_plot.py
bolt/workflows/smlv_germline/: prepare.py  report.py
bolt/workflows/smlv_somatic/: annotate.py  filter.py  report.py  rescue.py
bolt/workflows/sv_somatic/: annotate.py  prioritise.py
conda/env/: bolt_env.yml
data/testdata/filter/: .gitignore  smlv_somatic_filter_subset.vcf.dvc
docker/: Dockerfile  Dockerfile.circos  Dockerfile.gpgr  Dockerfile.multiqc  Dockerfile.pcgr  Dockerfile.snpeff
tests/: test_smlv_somatic_filter.py
tests/smlv_germline/: test_germline_leakage.py
tests/smlv_germline/assets/: gl.germline_calls.vcf.gz.tbi  gl.somatic_calls.vcf.gz.tbi
